crates/iql-parser/src/snapshots/issuecraft_ql__tests__keywords_as_field_names-3.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "user",
                op: Equal,
                value: String(
                    "alice",
                ),
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
