crates/iql-parser/src/snapshots/issuecraft_ql__tests__keywords_as_field_names-4.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "test#1",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "comment",
                value: String(
                    "test",
                ),
            },
        ],
    },
)
