crates/iql-parser/src/snapshots/issuecraft_ql__tests__keywords_as_field_names.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: Named(
            [
                "project",
                "user",
                "issue",
            ],
        ),
        from: Issues,
        filter: None,
        order_by: None,
        limit: None,
        offset: None,
    },
)
