crates/iql-parser/src/snapshots/issuecraft_ql__tests__limit_and_offset_together.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: None,
        order_by: None,
        limit: Some(
            50,
        ),
        offset: Some(
            100,
        ),
    },
)
