crates/iql-parser/src/snapshots/issuecraft_ql__tests__minimal_create_project.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Project {
        project_id: "test",
        name: None,
        description: None,
        owner: None,
    },
)
