crates/iql-parser/src/snapshots/issuecraft_ql__tests__negative_numbers.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "test#100",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "count",
                value: Number(
                    -50,
                ),
            },
        ],
    },
)
