crates/iql-parser/src/snapshots/issuecraft_ql__tests__not_with_parentheses.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Not(
                Or(
                    Comparison {
                        field: "status",
                        op: Equal,
                        value: String(
                            "closed",
                        ),
                    },
                    Comparison {
                        field: "status",
                        op: Equal,
                        value: String(
                            "archived",
                        ),
                    },
                ),
            ),
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
