crates/iql-parser/src/snapshots/issuecraft_ql__tests__null_values-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "assignee",
                op: Equal,
                value: Null,
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
