crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_all_entity_types-4.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Comments,
        filter: None,
        order_by: None,
        limit: None,
        offset: None,
    },
)
